# gdbus-helloworld

./: README.md  build-gdbus.sh
examples/: CMakeLists.txt
examples/inc/: dbusCommon.h  libClient.h  libServer.h
examples/src/: CltExample.c  SrvExample.c  libClient.c  libServer.c
examples/xml/: CMakeLists.txt  Makefile  com.Hiworld.Gdbus.example.xml
